# drain-rs

./: Cargo.toml  README.md
example/: main.rs
examples/: hdfs.rs
src/: lib.rs
tests/: integration_test.rs
