[package]
name = "drain-rs"
version = "0.2.0"
authors = ["Benjamin Trent <4357155+benwtrent@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
keywords= ["drain", "log", "categorization", "grok"]
description = "Automatically cluster semi-formatted text with the drain algorithm"
readme="README.md"
repository="https://github.com/benwtrent/drain-rs"
documentation="https://docs.rs/drain-rs"

[dependencies]
grok = "1.1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
